[package]
name = "rusty_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = {version = "4.5.28", features = ["derive"]}
env_logger = "0.11.6"
html_parser = "0.7.0"
log = "0.4.25"
reqwest = {version = "0.11.27", features = ["json"]}
tokio = {version = "1.43", features = ["full"]}
url = "2.4.1"
